[package]
name = "rust_training"
version = "0.1.0"
authors = ["dlinzner-bcs <dlinzner90@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.14.0"
nalgebra = "0.24.0"
rand = "0.5.3"
itertools = "0.10.0"
mathru = "0.0.2"
statrs = "0.7.0"